--- a/style.css
+++ b/style.css
@@ -1,160 +1,137 @@
-/* GLOBAL */
-
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #4D525E;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-div#container {
-    background-color: white;
-    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 10px;
-    width: 1030px;
-    height: 743px;
-    position: relative;
-}
-
-div#container section#left {
-    width: 660px;
-    padding: 92px 137px 0px 68px;
-}
-
-div#container section#right {
-    width: 370px;
 }
 
 h1 {
     font-weight: 300;
+    color: #4D525E;
+    font-size: 40px;
 }
 
 h2 {
-    color: #4D525E;
-    font-weight: 900;
+    font-size: 11px;
     text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: .2em;
 }
 
 p {
-    font-weight: normal;
     font-size: 12px;
-    line-height: 26px;
-    color: #A5A6AD;
-    margin: 0 0 43px 0;
+    line-height: 16px;
+    color: #A5A6Ad;
 }
 
-button {
-    outline: none;
+.container {
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 15px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
 
-button:hover {
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.04);
-    border-color: #FFFFFF;
-    cursor: pointer;
-    transition: .5s;
+.left {
+    padding: 80px 0px 0px;
+}
+
+.grid-7 {
+    margin-left: 50px;
 }
 
 
-/* LEFT */
+/* header */
 
 header h2 {
-    font-size: 11px;
-    line-height: 13px;
-    letter-spacing: 0.15em;
     color: #AFB3BB;
-    margin: 0 0 17px 0;
 }
 
 header h1 {
-    font-size: 46px;
-    line-height: 54px;
-    margin: 0 0 21px 0;
+    padding: 5px 0;
 }
 
-main button {
-    width: 455px;
-    height: 80px;
-    background: #FFFFFF;
+
+/* sign in */
+
+main ul {
+    padding: 50px 0px;
+}
+
+main ul li {
+    background-color: #fff;
     border: 1.5px solid rgba(196, 196, 196, 0.3);
     border-radius: 5px;
-    margin-bottom: 26px;
-    display: flex;
-    align-items: center;
+    padding: 30px 0px 30px 30px;
+    width: 100%;
 }
 
-main button img {
-    width: 25px;
-    height: 25px;
-    padding-left: 42px;
-    padding-right: 72px;
+main ul li:hover {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    transition: 200ms;
 }
 
-main button h2 {
-    font-family: 'Roboto Black';
-    font-style: normal;
-    font-size: 11px;
-    line-height: 13px;
-    letter-spacing: 0.2em;
+main ul li.facebook {
+    margin: 20px 0;
+}
+
+ul li img {
+    max-width: 28px;
+    margin-right: 50px!important;
+}
+
+ul li h2 {
+    padding-top: 8px;
     color: #585B63;
 }
 
-div#container {
-    display: flex;
+
+/* footer */
+
+footer {
+    margin-top: 20px;
+    border-top: 1px solid rgba(196, 196, 196, 0.3);
 }
 
-#linha {
-    margin-top: 53px;
-    height: 1px;
+footer.grid-10 {
+    margin-left: 0;
+    margin-right: 0;
 }
 
-hr {
-    position: absolute;
-    width: 658px;
-    left: 0px;
-    border: 1px solid rgba(196, 196, 196, 0.3);
+footer h1 {
+    font-size: 16px;
+}
+
+footer .btn {
+    float: right;
+}
+
+footer a {
+    color: #A6BC7E;
+    text-align: right;
+}
+
+footer h2 {
+    padding: 2px 0;
+}
+
+footer .grid-3 {
+    margin: 0;
 }
 
 footer {
-    display: flex;
-    height: 98px;
-    padding-top: 10px;
-    margin-bottom: 0px;
-    align-items: center;
-    justify-content: space-between;
-}
-
-footer div#left h1 {
-    font-family: Roboto;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 18px;
-    color: #4D525E;
-}
-
-footer div#right button {
-    width: 145px;
-    height: 39px;
-    background: #FFFFFF;
-    border: 1px solid rgba(196, 196, 196, 0.3);
-    box-sizing: border-box;
-    border-radius: 5px;
-}
-
-footer div#right button h2 {
-    font-family: Roboto;
-    font-weight: 900;
-    font-size: 8px;
-    line-height: 9px;
-    letter-spacing: 0.4em;
-    color: #A6BC7E;
+    padding: 30px 0;
 }
 
 
-/* RIGHT */
+/* right */
 
-div#container section#right img {
-    width: 370px;
-    height: 743px;
-    border-radius: 0 10px 10px 0;
+.right {
+    background: url(./img/building.jpg) no-repeat center;
+    background-size: cover;
+    float: right;
+    border-radius: 0px 10px 10px 0;
+    height: 664px;
+    width: 380px;
+}
+
+.right img {
+    box-sizing: content-box;
 }
